# rosetta

./: .dockerignore  DATA_INTEGRITY_REPORT.md  DOCKER_QUICKSTART.md  Dockerfile  HEBREW_IPA_IMPROVEMENT_REPORT.md  HIGH_RISK_MITIGATION_SUMMARY.md  IMPROVEMENT_SUMMARY.md  IPA_VALIDATION_FINDINGS.md  PIPELINE_STATISTICS.md  PRODUCTION_READINESS.md  README.md  REAL_DATA_SETUP.md  SETUP_REAL_DATA.md  check_translations.py  docker-compose.yml  pyproject.toml  stats.json  temp_sample.json  test_hebrew_ipa.py
.claude/: settings.local.json
.github/workflows/: ci.yml  security-scan.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_reporting.yml
docs/source/: conf.py  index.rst
scripts/: analyze_ipa_patterns.py  build_hebrew_ipa_lookup.py  security_scan.py  validate_data_quality.py  verify_hebrew_ipa.py
src/polysemic_rosetta/: __init__.py  __main__.py  settings.py
src/rosetta_dict/: pipeline_registry.py
src/rosetta_dict/monitoring/: __init__.py  alerts.py  health.py  metrics.py
src/rosetta_dict/pipelines/bridge_combination/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/data_acquisition/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/data_cleaning/: nodes.py  pipeline.py
src/rosetta_dict/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/example_processing/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/feature_engineering/: nodes.py  pipeline.py
src/rosetta_dict/pipelines/language_alignment/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/metrics_alignment/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/metrics_parsing/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/output_formatting/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/phonemization/: __init__.py  hebrew_ipa_generator.py  hebrew_ipa_lookup.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/reporting/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/validation/: __init__.py  nodes.py  pipeline.py
src/rosetta_dict/pipelines/wiktionary_parsing/: __init__.py  nodes.py  pipeline.py
tests/performance/: test_alignment_performance.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/language_alignment/: __init__.py  test_nodes.py
tests/pipelines/phonemization/: __init__.py  test_hebrew_ipa.py
tests/validation/: __init__.py  test_real_data_validation.py
