[tool.kedro]
package_name = "rosetta_dict"
project_name = "rosetta-dict"
kedro_init_version = "1.0.0"

[project]
name = "rosetta-dict"
version = "0.1.0"
description = "A polysemic Spanish-Hebrew dictionary generator using Kedro"
requires-python = ">=3.9"
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro[jupyter]~=1.0.0",
    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter, MemoryDataset]>=3.0",
    "kedro-viz>=6.7.0",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
    "wiktextract>=1.99.0",
    "lupa",
    "rapidfuzz>=3.0.0",
    "pyarrow>=15.0.0",
    "phonikud @ git+https://github.com/ElCuboNegro/phonikud.git@main",
    "phonikud-onnx>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0"
]
security = [
    "safety>=3.0.0",
    "pip-audit>=2.7.0",
    "bandit[toml]>=1.7.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
addopts = """
--verbose
--cov=rosetta_dict
--cov-report=html
--cov-report=term-missing
--cov-fail-under=70
"""
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Allow assert statements

[tool.kedro_telemetry]
project_id = "866770b797194e05aced725a49332966"
